# ctrx

./: CMakeLists.txt  README.md
.github/workflows/: gcc.yml
include/ctrx/: contract_type.hpp  contracts.hpp
include/ctrx/exceptions/: assertion_violation.hpp  contract_violation.hpp  postcondition_violation.hpp  precondition_violation.hpp
test/: CMakeLists.txt  test.cpp  test_contract_macro.cpp  test_fibonacci.cpp  test_level_audit.cpp  test_level_axiom.cpp  test_level_default.cpp  test_mode_handler.cpp  test_mode_off.cpp  test_mode_throw.cpp  test_throw_in_contract_check.cpp  test_with_messages.cpp
test/test_with_deps/: CMakeLists.txt  complex_test.cpp  libinterface.hpp  libshared.cpp  libstatic.cpp
